--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,14 +5,15 @@
   box-sizing: border-box;
 }
 
-#fondobody {
-  background-image: url(https://img.freepik.com/vector-gratis/fondo-lunares-vector-diseno-estetico_53876-143523.jpg?w=2000);
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .headercontainer {
   /* personalizacion logo */
   background-image: url(../img/dogs-5921796_960_720.webp);
-  background-color: rgb(198, 212, 255);
+  background-color: rgb(128, 237, 153);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: left;
@@ -20,12 +21,21 @@
 }
 
 .title {
+  background-color: rgb(34, 87, 122);
   padding: 25px;
   width: 100%;
   text-align: center;
 }
 .title .diseniotitulo {
   text-decoration: overline;
+}
+
+#coloraz {
+  background-color: rgb(34, 87, 122);
+}
+
+.colorletras {
+  color: white;
 }
 
 h1 {
@@ -50,13 +60,14 @@ h1 {
 .title .diseniotit {
   text-decoration: underline;
 }
+
 .card {
   padding: 10px;
   margin: 20px;
 }
 
 .bordercolor {
-  background-color: rgb(198, 212, 255);
+  background-color: rgb(199, 249, 204);
   align-items: center;
 }
 
@@ -66,7 +77,7 @@ h1 {
 }
 
 .colorfooter {
-  background-color: rgb(159, 93, 52);
+  background-color: rgb(128, 237, 153);
 }
 
 .disenioicon {
@@ -98,10 +109,6 @@ h1 {
   margin-top: 40px;
 }
 
-#fondobody {
-  background-image: url(https://img.freepik.com/vector-premium/fondo-patron-puntos-colores-lunares-sobre-fondo-blanco_391563-183.jpg);
-}
-
 .flex-q {
   display: flex;
   flex-direction: column;
@@ -116,16 +123,28 @@ h1 {
   justify-content: center;
 }
 
+.bgtexto {
+  background-color: rgb(128, 237, 153);
+}
+
 .bgform {
-  background-color: rgb(198, 212, 255);
+  background-color: rgb(199, 249, 204);
 }
 
 .marginubi {
-  margin-top: 80px;
+  margin-top: 50px;
 }
 
 .margfo {
   margin-top: 50px;
+}
+
+.bgubi {
+  background-color: rgb(56, 163, 165);
+}
+
+.widthmap iframe {
+  width: 70%;
 }
 
 /*# sourceMappingURL=estilos.css.map */
