--- a/sass/partials/_postulate.scss
+++ b/sass/partials/_postulate.scss
@@ -1,11 +1,23 @@
 .bgform{
-    background-color: rgb(198, 212, 255);
+    background-color: rgb(199, 249, 204);
 }
 
 .marginubi{
-    margin-top: 80px;
+     margin-top: 50px;
 }
 
 .margfo{
     margin-top: 50px;
+    
+}
+
+.bgubi{
+    background-color: rgb(56, 163, 165);
+}
+
+.widthmap{
+    iframe{
+        width: 70%;
+        
+    }
 }
