--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -24,6 +24,9 @@ body{
         background-repeat: no-repeat;
         background-position:left; 
         height: 80px; 
+        position: fixed;
+        z-index: 1;
+        top: 0;
         
     
 }
