--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,6 +10,12 @@ body {
   overflow-x: hidden;
 }
 
+header {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+}
+
 .headercontainer {
   /* personalizacion logo */
   background-image: url(../img/dogs-5921796_960_720.webp);
