--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,20 +10,13 @@ body {
   overflow-x: hidden;
 }
 
-header {
-  position: sticky;
-  z-index: 1;
-  top: 0;
-}
-
 .headercontainer {
   /* personalizacion logo */
-  background-image: url(../img/dogs-5921796_960_720.webp);
+  background-image: url(../../img/dogs-5921796_960_720.webp);
   background-color: rgb(128, 237, 153);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: left;
-  height: 80px;
 }
 
 .title {
