--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -92,6 +92,8 @@ h1{
    
 }
 
+
+
 // FOOTER //
 
 .colorfooter{
@@ -128,3 +130,15 @@ h1{
     margin-top: 40px;
 }
 
+.color-insta{
+    color: rgb(225 48 108);
+}
+
+.color-fb{
+    color: rgb(66 103 178);
+}
+
+.color-yt{
+    color: rgb(255 0 0);
+}
+ 
