--- a/css/estilos.css
+++ b/css/estilos.css
@@ -140,6 +140,11 @@ h1 {
   justify-content: center;
 }
 
+.cardq {
+  padding: 10px;
+  margin: 20px;
+}
+
 .bgtexto {
   background-color: rgb(128, 237, 153);
 }
