--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -75,9 +75,12 @@ h1{
 .card{
     padding: 10px;
     margin: 20px;
-    height: 550px;
+    
 }
 
+.tamcard{
+    height: 550px;
+}
 
 
 .scroll {
