--- a/sass/partials/_quienesSomos.scss
+++ b/sass/partials/_quienesSomos.scss
@@ -6,22 +6,26 @@
 .flex-q{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    
+    
     .imgq{
-        margin-top: 10px;     
+        margin-top: 2px;     
     }   
 }
 
 .flex2{
     display: flex;
-    
-    justify-content: center;    
+    justify-content: center;
+    justify-items: center;    
 }
 
 .cardq{
     padding: 10px;
     margin: 20px;
+    height: 550px;
 }
+
+
 
 
 
